tests/NormalTests/paczka1/fuzzy1/54977058.err
Error in line 1: y8jm0HnG A564 64,9
Error in line 11: y8jm0HnG A10 335,02
Error in line 22: 4eTI7E A209 93,3
Error in line 30: 5N1pis A564 26,1
